--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.0.3",
     "@react-navigation/stack": "^5.0.3",
+    "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "graphql": "^14.6.0",
     "i18next": "^19.1.0",
     "react": "16.9.0",
     "react-i18next": "^11.3.2",
